<resources>
    <string name="app_name">Design Palette</string>
    <string name="text_view">Text View</string>
    <string name="image_view">Image View</string>
    <string name="button">Button</string>
    <string name="edit_text">Edit Text</string>
    <string name="list_view">List View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="a_frog">A frog</string>
    <string name="ordinals">first second third fourth fifth sixth seventh eights</string>
    <string name="get_random_image">Get random image</string>
    <string name="a_truck_is_parked">a truck is parked in front of a mountain</string>
    <string name="android_launcher_icon_description">android launcher icon</string>
    <string name="show_advanced_settings">Show advanced settings</string>
    <string name="select_a_keyword">Select a keyword</string>
    <string name="tree">Tree</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="city">City</string>
    <string name="enter_a_keyword">Enter a keyword</string>
    <string name="enter_keyword">Enter keyword</string>
    <string name="simple_adapter">Simple Adapter</string>
    <string name="array_adapter">Array Adapter</string>
    <string name="base_adapter">Base Adapter</string>
    <string name="create_user">Create user</string>
    <string name="delete_user">Delete user</string>
    <string name="info">Info</string>
    <string name="delete_user_message">Do you want to delete %1$s?</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="write_a_name">Write a name</string>
    <string name="avatar">Avatar</string>
    <string name="more">More Actions</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="fire">Fire</string>
    <string name="unemployed">[Unemployed]</string>
</resources>