<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainScreenActivity">

    <Button
        android:id="@+id/buttonTextView"
        style="@style/MyButtonStyle"
        android:text="@string/text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002" />

    <Button
        android:id="@+id/buttonImageView"
        style="@style/MyButtonStyle"
        android:text="@string/image_view"
        app:layout_constraintEnd_toEndOf="@+id/buttonTextView"
        app:layout_constraintStart_toStartOf="@+id/buttonTextView"
        app:layout_constraintTop_toBottomOf="@+id/buttonTextView" />

    <Button
        android:id="@+id/buttonButton"
        style="@style/MyButtonStyle"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="@+id/buttonImageView"
        app:layout_constraintStart_toStartOf="@+id/buttonImageView"
        app:layout_constraintTop_toBottomOf="@+id/buttonImageView" />

    <Button
        android:id="@+id/buttonEditText"
        style="@style/MyButtonStyle"
        android:text="@string/edit_text"
        app:layout_constraintEnd_toEndOf="@+id/buttonButton"
        app:layout_constraintStart_toStartOf="@+id/buttonButton"
        app:layout_constraintTop_toBottomOf="@+id/buttonButton" />

    <ProgressBar
        android:id="@+id/progressBarHorizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:layout_marginBottom="@dimen/common_margin_30_dp"
        android:scaleY="3"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>