<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.listview.ListViewActivity">

    <Button
        android:id="@+id/buttonSimpleAdapter"
        style="@style/MyButtonStyle.WideButton"
        android:text="@string/simple_adapter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonArrayAdapter"
        style="@style/MyButtonStyle.WideButton"
        android:text="@string/array_adapter"
        app:layout_constraintEnd_toEndOf="@+id/buttonSimpleAdapter"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@+id/buttonSimpleAdapter"
        app:layout_constraintTop_toBottomOf="@+id/buttonSimpleAdapter" />

    <Button
        android:id="@+id/buttonBaseAdapter"
        style="@style/MyButtonStyle.WideButton"
        android:text="@string/base_adapter"
        app:layout_constraintEnd_toEndOf="@+id/buttonArrayAdapter"
        app:layout_constraintStart_toStartOf="@+id/buttonArrayAdapter"
        app:layout_constraintTop_toBottomOf="@+id/buttonArrayAdapter" />
</androidx.constraintlayout.widget.ConstraintLayout>